...
        <!--Application-->
        <scene sceneID="JPo-4y-FX3">
            <objects>
                <application id="hnw-xV-0zn" sceneMemberID="viewController">
                    <menu key="mainMenu" title="Main Menu" systemMenu="main" id="AYu-sK-qS6">
                        <items>
                            <menuItem title="TetraVex" id="1Xt-HY-uBw">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <menu key="submenu" title="TetraVex" systemMenu="apple" id="uQy-DD-JDr">
                                    <items>
                                        <menuItem title="About TetraVex" id="5kV-Vb-QxS">
                                            <modifierMask key="keyEquivalentModifierMask"/>
                                            <connections>
...
                                                <action selector="terminate:" target="Ady-hI-5gd" id="Te7-pn-YzF"/>
                                            </connections>
                                        </menuItem>
                                    </items>
                                </menu>
                            </menuItem>
                            <menuItem title="Game" id="dMs-cI-mzQ">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <menu key="submenu" title="Game" id="bib-Uj-vzu">
                                    <items>
                                        <menuItem title="New Game" keyEquivalent="n" id="Was-JA-tGl">
                                            <accessibility description="New Game"/>
                                            <connections>
                                                <action selector="newGameWithSender:" target="Ady-hI-5gd" id="AaI-I6-DVb"/>
                                            </connections>
                                        </menuItem>
                                        <menuItem title="Pause" keyEquivalent="p" id="V4n-Pa-RQO"/>
...
