...
      self.needsDisplay = true
    }
  }

  // MARK: - Accessibility functions
  override func accessibilityLabel() -> String? {
    return "TetraVex Piece"
  }

  // MARK: - Drawing operations
  var textStyle: TVPieceModel.TextStyle {
    return pieceModel?.textStyle ?? TVPieceModel.TextStyle.digits
  }
...
